// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse Helper #toggleLinksConnections should properly set isHidden value for given links and linksMatrix 1`] = `
Array [
  Object {
    "isHidden": true,
    "source": "Androsynth",
    "target": "Chenjesu",
  },
  Object {
    "isHidden": true,
    "source": "Androsynth",
    "target": "Ilwrath",
  },
  Object {
    "isHidden": false,
    "source": "Androsynth",
    "target": "Mycon",
  },
  Object {
    "isHidden": false,
    "source": "Androsynth",
    "target": "Spathi",
  },
  Object {
    "isHidden": false,
    "source": "Androsynth",
    "target": "Umgah",
  },
  Object {
    "isHidden": false,
    "source": "Chenjesu",
    "target": "Guardian",
  },
  Object {
    "isHidden": false,
    "source": "Chenjesu",
    "target": "VUX",
  },
  Object {
    "isHidden": false,
    "source": "Chenjesu",
    "target": "Broodhmome",
  },
  Object {
    "isHidden": false,
    "source": "Mycon",
    "target": "Drone",
  },
  Object {
    "isHidden": false,
    "source": "Mycon",
    "target": "Intruder",
  },
  Object {
    "isHidden": false,
    "source": "Ilwrath",
    "target": "Avenger",
  },
  Object {
    "isHidden": false,
    "source": "Ilwrath",
    "target": "Podship",
  },
  Object {
    "isHidden": false,
    "source": "Ilwrath",
    "target": "Eluder",
  },
  Object {
    "isHidden": false,
    "source": "Umgah",
    "target": "Hello",
  },
  Object {
    "isHidden": false,
    "source": "Umgah",
    "target": "World",
  },
]
`;

exports[`Collapse Helper #toggleLinksMatrixConnections when graph is directed should properly toggle passed connections in links matrix 1`] = `
Object {
  "Androsynth": Object {
    "Chenjesu": 0,
    "Ilwrath": 0,
    "Mycon": 1,
    "Spathi": 1,
    "Umgah": 1,
  },
  "Avenger": Object {},
  "Broodhmome": Object {},
  "Chenjesu": Object {
    "Broodhmome": 1,
    "Guardian": 1,
    "VUX": 1,
  },
  "Drone": Object {},
  "Eluder": Object {},
  "Guardian": Object {},
  "Hello": Object {},
  "Ilwrath": Object {
    "Avenger": 1,
    "Eluder": 1,
    "Podship": 1,
  },
  "Intruder": Object {},
  "Mycon": Object {
    "Drone": 1,
    "Intruder": 1,
  },
  "Podship": Object {},
  "Spathi": Object {},
  "Umgah": Object {
    "Hello": 1,
    "World": 1,
  },
  "VUX": Object {},
  "World": Object {},
}
`;

exports[`Collapse Helper #toggleLinksMatrixConnections when graph is not directed should properly toggle passed connections in links matrix 1`] = `
Object {
  "Androsynth": Object {
    "Chenjesu": 0,
    "Ilwrath": 0,
    "Mycon": 1,
    "Spathi": 1,
    "Umgah": 1,
  },
  "Avenger": Object {
    "Ilwrath": 1,
  },
  "Broodhmome": Object {
    "Chenjesu": 1,
  },
  "Chenjesu": Object {
    "Androsynth": 0,
    "Broodhmome": 1,
    "Guardian": 1,
    "VUX": 1,
  },
  "Drone": Object {
    "Mycon": 1,
  },
  "Eluder": Object {
    "Ilwrath": 1,
  },
  "Guardian": Object {
    "Chenjesu": 1,
  },
  "Hello": Object {
    "Umgah": 1,
  },
  "Ilwrath": Object {
    "Androsynth": 0,
    "Avenger": 1,
    "Eluder": 1,
    "Podship": 1,
  },
  "Intruder": Object {
    "Mycon": 1,
  },
  "Mycon": Object {
    "Androsynth": 1,
    "Drone": 1,
    "Intruder": 1,
  },
  "Podship": Object {
    "Ilwrath": 1,
  },
  "Spathi": Object {
    "Androsynth": 1,
  },
  "Umgah": Object {
    "Androsynth": 1,
    "Hello": 1,
    "World": 1,
  },
  "VUX": Object {
    "Chenjesu": 1,
  },
  "World": Object {
    "Umgah": 1,
  },
}
`;
